tests/testthat/test-mutate-errors.txt
> tbl <- tibble(x = 1:2, y = 1:2)
+ # # setting column to NULL makes it unavailable
+ tbl %>% mutate(y = NULL, a = sum(y))
+ tbl %>% group_by(x) %>% mutate(y = NULL, a = sum(y))
+ # # incompatible column type
+ tibble(x = 1) %>% mutate(y = mean)
+ # # Unsupported type
+ df <- tibble(g = c(1, 1, 2, 2, 2), x = 1:5)
+ df %>% mutate(out = env(a = 1))
+ df %>% group_by(g) %>% mutate(out = env(a = 1))
+ df %>% rowwise() %>% mutate(out = rnorm)
+ # # incompatible types across groups
+ data.frame(x = rep(1:5, each = 3)) %>% group_by(x) %>% mutate(val = ifelse(x <
+ 3, "foo", 2))
+ tibble(a = 1:3, b = 4:6) %>% group_by(a) %>% mutate(if (a == 1) NULL else "foo")
+ # # incompatible size
+ data.frame(x = c(2, 2, 3, 3)) %>% mutate(int = 1:5)
+ data.frame(x = c(2, 2, 3, 3)) %>% group_by(x) %>% mutate(int = 1:5)
+ data.frame(x = c(2, 3, 3)) %>% group_by(x) %>% mutate(int = 1:5)
+ data.frame(x = c(2, 2, 3, 3)) %>% rowwise() %>% mutate(int = 1:5)
+ tibble(y = list(1:3, "a")) %>% rowwise() %>% mutate(y2 = y)
+ # # .data pronoun
+ tibble(a = 1) %>% mutate(c = .data$b)
+ tibble(a = 1:3) %>% group_by(a) %>% mutate(c = .data$b)
+ # # incorrect [ implementation
+ local_methods([.dplyr_test_mutate = function(x, ...) {
+   unclass(x)
+ })
+ df <- new_tibble(list(x = 1), nrow = 1L, class = "dplyr_test_mutate")
+ mutate(df, x = 2, .keep = "none")
Error: <text>:26:15: unexpected '['
25: # # incorrect [ implementation
26: local_methods([
                  ^

